--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,5 @@
     "http.proxyAuthorization": null,
     "http.proxyStrictSSL": false,
     "editor.renderWhitespace": "none",
-    "formatFiles.excludePattern": "**/node_modules,**/node_modules/**,**/.vscode,**/.vscode/**,**/dist,**/dist/**,**/.chrome,**/misc,**/misc/**,**/sources,**/sources/**"
+    "formatFiles.excludePattern": "**.git/,**/.git/**,**/node_modules,**/node_modules/**,**/.vscode,**/.vscode/**,**/dist,**/dist/**,**/.chrome,**/misc,**/misc/**,**/sources,**/sources/**"
 }
