--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.27.0",
     "fs-extra": "^10.0.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.30.0",
+    "@types/node": "^16.0.0"
   }
 }
